
include/bg/chull.h
        All functions returning point arrays instead of index arrays.
        Will be replaced by similarly named functions returning
        indexes into provided points array, to allow the caller
        to decide if new arrays are needed. [deprecated 7.32]
        bg_polyline_2d_chull, bg_2d_chull, bg_3d_coplanar_chull,
        bg_3d_chull

MGED gui
	The following will be removed from MGED's menu bar (unused
	features, can be accomplished another way, or will be exposed
	only as lower level settings when there are sensible defaults
	that are seldom changed.)

	Settings->Mouse Behavior->Pick Raytrace-Object(s)

7.30
----
~/.density
        automatic reading of .density file in home directory
        materials need to be specified or imported [deprecated 7.28]

btclsh, bwish
	Emacs key binding emulation
	achieved by running btclsh in Emacs [deprecated 7.30]

include/bu/redblach.h
	All redblack related functions, structures and macros
	defined in libbu's redblack.h.  Functions are:
	bu_rb_create, bu_rb_delete, bu_rb_diagnose_tree,
	bu_rb_summarize_tree, bu_rb_extreme, bu_rb_neighbor,
	bu_rb_curr, bu_rb_free, bu_rb_insert, bu_rb_is_uniq,
	bu_rb_set_uniqv, bu_rb_uniq_all_off, bu_rb_uniq_all_on,
	bu_rb_uniq_on, bu_rb_uniq_off, bu_rb_rank, bu_rb_select,
	bu_rb_search, bu_rb_walk
	Use C++ containers set/map from std [deprecated 7.30]

nirt
	Behavior available under the --old flag [deprecated 7.30]

7.28
----
include/bu/malloc.h
        bu_ck_malloc_ptr, bu_mem_barriercheck, bu_prmem
	replaced by modern memory analyzers [deprecated 7.28]

include/rt/mem.h
	rt_memprint [deprecated 7.28]

include/vmath.h
        VCOMB3, VCOMB3N, VJOIN4
        Removed as inconsistent and unused API [deprecated 7.28]

MGED commands
	?devel, ?lib, aproposdevel, aproposlib, %, animmate, db_glob,
	debugbu, debugdir, debuglib, debugmem, debugnmg, expand,
	loadtk, match, memprint, preview, regdebug, regdef, rmats, rrt,
	savekey, shaded_mode, sync