@@ -141,6 +141,13 @@ include/bg/chull.h
         bg_polyline_2d_chull, bg_2d_chull, bg_3d_coplanar_chull,
         bg_3d_chull
 
+include/bu/exit.h
+        bu_backtrace and bu_crashreport will be replaced with versions
+        that take an optional parameter to pass in a full path from
+        the calling application.  (Currently available as
+        bu_backtrace_app and bu_crashreport_app, these will
+        replace existing versions after deprecation is complete.)
+
 MGED gui
 	The following will be removed from MGED's menu bar (unused
 	features, can be accomplished another way, or will be exposed
